# fiware-skuld

./: .bumpversion.cfg  .coverage  .coveragerc  .gitchangelog.rc  .gitignore  .travis.yml  CHANGELOG.rst  Dockerfile  LICENSE  README.md  README.rst  analyse_report_data.py  blueprint_resources.py  change_identity.py  change_password.py  check_users.py  cinder.py  cinder_resources.py  create_resources.py  cron_script.sh  delete.py  docker-compose.yml  endpoints.py  expired_users.py  glance.py  glance_resources.py  impersonate.py  list.py  list_resources.py  neutron.py  neutron_resources.py  nova.py  nova_resources.py  openstackmap.py  osclients.py  phase0_generateuserlist.py  phase0_generateuserlist_alt.py  phase0b_notify_users.py  phase0c_change_category.py  phase1_generate_trust_ids.py  (+18 more)
SkuldForAll/: OpenstackQueries.py  README.md  README.rst  fiware-users.ini  functions.py  get_outdate_people.py  interesting_info.py  skulded.py
conf/: __init__.py  settings.py
docker/: Dockerfile  Dockerfile_build  README.md  configuration.py  docker-compose.yml  log_rules  settings.py  start.sh
fiwareskuld/: blueprint_resources.py  change_password.py  check_users.py  create_users.py  expired_users.py  glance_resources.py  impersonate.py  neutron_resources.py  nova_resources.py  openstackmap.py  phase0_generateuserlist.py  phase0_generateuserlist_alt.py  phase2_stopvms.py  phase2c_deletespecialports.py  special_ports.py  user_resources.py  users_management.py
licenses/: python-keystoneclient  requests-mock
scripts/: analyse_report_data.py  classify_resources_by_owners.py
(+173 files in other folders)
