[metadata]
name = fiware-skuld
summary = fiware-skuld
description-file =
    README.rst

author = Telefónica Investigación y Desarrollo
author-email = opensource@tid.es
home-page = http://www.tid.es
version = 1.4.0

classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7


[files]
packages =
        fiwareskuld
